menu bars alignment fix

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -44,7 +44,7 @@
       -moz-border-radius: 0.1rem;
       -ms-border-radius: 0.1rem;
       -o-border-radius: 0.1rem;
-      &:not(:last-child) {
+      &:not(:nth-of-type(3)) {
         margin-bottom: 5px;
       }
     }
